--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="../css/productos.css"
+
     <title>CSS :: HTML</title>
 
-    <link rel="stylesheet" href="../css/productos.css"
 </head>
 
 <body>
@@ -21,6 +23,9 @@
         <ul>
             <li>
                 <a href="./index.html">Home de la empresa</a>
+            </li>
+            <li>
+                <a href="./pages/productos.html">Página de productos</a>
             </li>
         </ul>
     </nav>
